--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,12 @@ repos:
     - id: end-of-file-fixer
     - id: trailing-whitespace
 
+- repo: https://github.com/pycqa/isort
+  rev: 5.12.0
+  hooks:
+    - id: isort
+      name: isort (python)
+
 - repo: https://github.com/psf/black
   rev: 23.7.0
   hooks:
