--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,40 +1,11 @@
 exclude: .*migrations\/.*
 repos:
-
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
-    hooks:
-    - id: check-yaml
-    - id: end-of-file-fixer
-    - id: trailing-whitespace
-
-- repo: https://github.com/psf/black
-  rev: 23.7.0
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.14.11
   hooks:
-    - id: black
-      language_version: python3.11
-
-- repo: https://github.com/pre-commit/mirrors-autopep8
-  rev: 'v2.0.4'  # Use the sha / tag you want to point at
-  hooks:
-    - id: autopep8
-
-- repo: https://github.com/pycqa/flake8
-  rev: 6.0.0
-  hooks:
-    - id: flake8
-
-- repo: https://github.com/Riverside-Healthcare/djLint
-  rev: v1.32.1
-  hooks:
-    - id: djlint-django
-
-- repo: https://github.com/python-poetry/poetry
-  rev: '1.6.1'
-  hooks:
-    - id: poetry-export
-      args: [
-        "-f", "requirements.txt",
-        "-o", "requirements.txt",
-        "--without-hashes"
-      ]
+    # Run the linter.
+    - id: ruff-check
+      args: [ --fix ]
+    # Run the formatter.
+    - id: ruff-format
