--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "django>=6.0.1",
     "python-codicefiscale>=0.11.2",
-    "python-telegram-bot>=22.5",
+    "python-telegram-bot[job-queue]>=22.5",
 ]
 
 [dependency-groups]
