--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ requires-python = ">=3.13"
 dependencies = [
     "django>=6.0.1",
     "pillow>=11.0.0", # barcode reading
-    "pyzbar>=0.1.9",  # barcode reading
+    "pyzbar>=0.1.9", # barcode reading
     "python-codicefiscale>=0.11.2",
     "python-telegram-bot[job-queue]>=22.5",
+    "gunicorn>=23.0.0",
 ]
 
 [dependency-groups]
